fixed scrollbar at bottom

--- a/resources/scss/components/_content.scss
+++ b/resources/scss/components/_content.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-grow: 1;
     flex-direction: column;
-    overflow: scroll;
+    overflow-y: scroll;
     padding: spacing.$normal;
 }
 
